--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ font-family: Arial, Helvetica, sans-serif;
 }
 
 /* weather api style */
-#wea{
+#weather{
     position: fixed;
     background-color: #485a6d;
     width: 17%;
@@ -20,7 +20,7 @@ font-family: Arial, Helvetica, sans-serif;
     
     box-sizing: border-box ;
 }
-#wea p{
+#weather p{
     display: inline-block;
     margin-left: 10px;
     margin-top:5px ;
@@ -41,24 +41,20 @@ text-align: center;
 
 height: 100px;
 
-opacity: 1;
-transition:opacity 500ms ;
 
 }
-.fade#error{
-    opacity: 0;
-}
+
 #close-alert{
     border-radius: 5px;
     font-size: 20;
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     text-align: center;
     background-color: #70809000 ;
     border: none;
     margin: 0px;
-    position: relative;
-    right: -60px;
+    position: absolute;
+    right: 10px;
 }
 #close-alert:hover{
 
@@ -67,7 +63,7 @@ transition:opacity 500ms ;
 }
 #detail{
     
-    margin-top: 20px;
+    margin-top: 40px;
     
 }
 
@@ -148,6 +144,7 @@ transition:opacity 500ms ;
     margin-bottom: 10px;
     margin-right:40px;
     opacity: 0.8;
+    position: relative;
 }
 span{
     margin-left: 5px;
@@ -178,13 +175,13 @@ span{
     
 }
 .duty{
-    width: 35%;
+    width: 15%;
     box-sizing: border-box;
-    background-color: azure;
+    background-color: rgba(240, 255, 255, 0);
     border: none;
     border-radius:1px ;
-    margin: 5px;
-    
+    float: right;
+   
     transition:background-color 500ms ,border-radius 500ms ;
     /* transition-delay: 0.25s; */
 }
@@ -196,17 +193,6 @@ background-color: rgb(166, 208, 208);
 }
 
 
-
-/* visiblty of elements */
-.visiblity{
-    opacity: 1;
-}
-.visiblityhide{
-    opacity: 0;
-}
-
-
-/* for done tasks */
 .decorator{
     text-decoration: line-through;
 }
